# python-study

./: .env  README.md  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py
docs/: debug.md  env作用.md  uvicorn作用.md  with作用.md  操作符重载.md
src/: Untitled.ipynb  async_for.py  call_test.py  function_test.py  generator_test.py  generic_test.py  iterator_test.py  main.py  pipeline_test.py  pydantic_test.py  string_template.py
src/.ipynb_checkpoints/: main-checkpoint.py
src/com/zg/: agent.py  ai.py  custom_model.py  example.py
