[project]
name = "coroutine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.32",
    "langchain[google-genai]>=0.3.27",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]
