[project]
name = "coroutine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langchain[google-genai]>=0.3.27",
    "langchainhub>=0.1.21",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "tavily-python>=0.7.11",
]
